Create City API works!