@@ -1,4 +1,5 @@
 #!/bin/bash
 
+export JVM_OPTIONS="-Xmx1g -XX:MaxPermSize=256m -agentlib:jdwp=transport=dt_socket,server=y,address=8001,suspend=n"
 # Search for the "FAT" jar, and spin off the Jetty server locally
-java -jar $(find . -iname vb-api-services*.jar -type f) server
+java $JVM_OPTIONS -jar $(find . -iname vb-api-services*.jar -type f) server 
